# incident-generator

./: .gitignore  CANONICAL_SOURCE.md  Makefile  README.md  pyproject.toml
benchmark-artifacts/: registry.json  registry.md
docs/: agent-adapter-contract.md  alpha-benchmark-sets.md  app-host-lite-baseline.md  benchmark-release-manifest.md  benchmark-result-comparison.md  benchmark-result-schema.md  cascading-temporal-incident-model.md  confidence-calibration-report.md  crisismode-support.md  ecommerce-lite-baseline.md  ecommerce-lite-load-generator.md  edge-gateway-baseline-mapping.md  evidence-signal-role-taxonomy.md  golden-response-seeds.md  incorrect-response-seeds.md  judge-pack-selection.md  live-run-reproducibility.md  noisy-checkout-vertical-smoke.md  noisy-database-live-smoke.md  noisy-fixture-renderer.md  noisy-partial-failure-pack.md  production-noise-source-catalog.md  production-roadmap.md  random-pair-fixture-preview.md  recovery-after-diagnosis-benchmark.md  skill-drill-export.md  standalone-examples.md  training-authoring-guide.md  training-curriculum.md  triple-benchmark-fixture-preview.md
evals/: README.md  fixture-hygiene-allowlist.yaml  manifest.yaml
harness/: adversarial-benchmark-combos.yaml  agent-adapter-abstention-example.json  agent-adapter-benchmark-set.yaml  agent-adapter-contract-example.json  agent-adapter-investigation-final-response-example.json  agent-adapter-investigation-session-example.json  agent-adapter-investigation-tool-request-example.json  agent-adapter-investigation-tool-result-example.json  agent-adapter-judge-packs.yaml  (+47 more)
(+1223 files in other folders)
