[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-generator"
version = "0.1.0"
description = "Deterministic incident environment generator for agent evaluation and benchmarking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
incident-generator = "incident_generator.cli:main"

[tool.setuptools]
packages = ["incident_generator"]

